# config-utility

codebaseroot/cerner-fhir-resource-app/: .gitignore  .gitlab-ci.yml  Pipfile  README.md  pyproject.toml
codebaseroot/cerner-fhir-resource-app/src/: encounter_search_app.py  fhir_service.py  patient_search_app.py
codebaseroot/cerner-fhir-resource-app/tests/: basic_token_service_test.py  bundle_coverage_123456.json  bundle_observation_123456.json  bundle_observation_123456_next.json  conftest.py  patient_123456.json
developer-notes/: Installation Notes.docx
developer-notes/Tutorial Notes/: GIT and GitHub Crash Course for Beginners .docx
developer-notes/deployment/: .env  Create a CDK project in Python.docx  Python Project Configure.docx
document/: developer-config-basic.txt  first_test.txt
